--- a/output/Proration.html
+++ b/output/Proration.html
@@ -9,19 +9,19 @@ mycolor {#ff0000}
 
 <body>
 <h1 width:100%> Proration:</h1>
-<p>modified_merged_data written in vtds_modified Units</p>
+<p>modified_projection_counties written in modified_projection_vtds Units</p>
 <div width=100%>
    <div width=45%>
-      modified_merged_data:
+      modified_projection_counties:
       <ul>
-          <li> 20 geographic units</li>
+          <li> 28 geographic units</li>
           <li> 0.7922394430951338 average area per unit</li>
           <li> 0.034558230256887264 average Polsby-Popper per unit</li>
       </ul>
    </div>
    <div width=45%>
-    vtds_modified:
-    <li> 13 geographic units</li>
+    modified_projection_vtds:
+    <li> 24 geographic units</li>
     <li> 0.009993423386458901 average area per unit</li>
     <li> 0.038589006506637914 average Polsby-Popper per unit</li>
   </div>
@@ -32,11 +32,11 @@ mycolor {#ff0000}
 <table>
 <tr><th>Column Name</th><th>Total Count</th><th>Max</th><th>Min</th><th>Average</th></tr>
 <tr>
-<td>POP_LASTCE</td>
-<td>2845002</td>
-<td>1050341</td>
-<td>1078</td>
-<td>1237.4954327968683</td>
+<td>R</td>
+<td>257568</td>
+<td>71808</td>
+<td>94</td>
+<td>112.03479773814702</td>
 </tr>
 <tr>
 <td>D</td>
@@ -44,13 +44,6 @@ mycolor {#ff0000}
 <td>66980</td>
 <td>20</td>
 <td>48.351457155284905</td>
-</tr>
-<tr>
-<td>R</td>
-<td>257568</td>
-<td>71808</td>
-<td>94</td>
-<td>112.03479773814702</td>
 </tr>
 <tr>
 <td>Total</td>
@@ -66,11 +59,11 @@ mycolor {#ff0000}
 <table>
 <tr><th>Column Name</th><th>Total Count</th><th>Max</th><th>Min</th><th>Average</th></tr>
 <tr>
-<td>POP_LASTCE</td>
-<td>2845002.0</td>
-<td>201256.74902393032</td>
+<td>R</td>
+<td>257568.0</td>
+<td>22286.481326156667</td>
 <td>0.0</td>
-<td>1237.4954327968683</td>
+<td>112.03479773814702</td>
 </tr>
 <tr>
 <td>D</td>
@@ -78,13 +71,6 @@ mycolor {#ff0000}
 <td>6087.798679120864</td>
 <td>0.0</td>
 <td>48.351457155284905</td>
-</tr>
-<tr>
-<td>R</td>
-<td>257568.0</td>
-<td>22286.481326156667</td>
-<td>0.0</td>
-<td>112.03479773814702</td>
 </tr>
 <tr>
 <td>Total</td>
@@ -99,16 +85,12 @@ mycolor {#ff0000}
 <h3 width=100%> Vote Data Visualized</h3>
 <p width=100%>
 <div width=100%>
-    <img src='Proration_images/POP_LASTCE_o.png' width=45%/>
-    <img src='Proration_images/POP_LASTCE_p.png' width=45%/>
+    <img src='Proration_images/R_o.png' width=45%/>
+    <img src='Proration_images/R_p.png' width=45%/>
 </div>
 <div width=100%>
     <img src='Proration_images/D_o.png' width=45%/>
     <img src='Proration_images/D_p.png' width=45%/>
-</div>
-<div width=100%>
-    <img src='Proration_images/R_o.png' width=45%/>
-    <img src='Proration_images/R_p.png' width=45%/>
 </div>
 <div width=100%>
     <img src='Proration_images/Total_o.png' width=45%/>
